--- a/src/components/Restaurants/Restaurants.css
+++ b/src/components/Restaurants/Restaurants.css
@@ -20,12 +20,14 @@
 	font-size: 24px;
 	line-height: 32px;
 	letter-spacing: 0.075em;
-	margin: 20px auto;
+	/* margin: 20px auto; */
+	margin-top: 20px;
+	margin-bottom: 20px;
 	text-align: start;
-	padding: 0 5rem;
-	display: flex;
+	padding: 0 11rem;
+	/* display: flex;
 	flex-wrap: wrap;
-	justify-content: flex-start;
+	justify-content: flex-start; */
 }
 
 .badges {
@@ -251,13 +253,18 @@ p.error-specification {
 	}
 
 	.restaurant-card {
-		width: 92.5%;
-		margin: 0.5rem 2rem;
+		width: 100%;
+		margin: 0.5rem 1.3rem;
 	}
 }
 
 @media (max-width: 640px) {
 	.restaurant-card {
-		width: 85%;
+		width: 90%;
+		-webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
+		box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
+	}
+	.restaurants-header {
+		padding: 0 1.5rem;
 	}
 }
