--- a/src/components/RestaurantsDetail/Info/Info.css
+++ b/src/components/RestaurantsDetail/Info/Info.css
@@ -11,7 +11,7 @@
 	height: 6rem;
 	margin-top: 1rem;
 	cursor: pointer;
-	padding: 0 5rem;
+	padding: 0 6rem;
 }
 
 @media (max-width: 960px) {
@@ -21,5 +21,11 @@
 		height: max-content;
 		-ms-flex-pack: distribute;
 		justify-content: space-around;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.restaurant-detail__info-information {
+		flex-direction: column;
 	}
 }
