--- a/src/components/css/DealsOfTheDay.css
+++ b/src/components/css/DealsOfTheDay.css
@@ -1,92 +1,94 @@
 .big-font,
 .big-font-thin {
-  font-size: 2rem;
-  letter-spacing: 1px;
-  margin-bottom: 2rem;
+	font-size: 2rem;
+	letter-spacing: 1px;
+	margin-bottom: 2rem;
 }
 .big-font {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .md-font {
-  font-weight: bold;
-  margin-bottom: 2rem;
+	font-weight: bold;
+	margin-bottom: 2rem;
 }
 .md-font-thin,
 .md-font {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 .cuisine-img {
-  width: 70%;
-  /* box-shadow: 1px 1px 5px gray; */
+	width: 70%;
+	cursor: pointer;
+	/* box-shadow: 1px 1px 5px gray; */
 }
 .order-container {
-  margin-bottom: 2rem;
-  padding-top: 4rem;
-  padding-bottom: 2rem;
+	margin-bottom: 2rem;
+	padding-top: 4rem;
+	padding-bottom: 2rem;
 }
 /* end  */
 
 /* DealsOfTheDay */
 .deal-container {
-  margin-bottom: 2rem;
-  padding: 2rem 0.5rem 0rem 0.5rem;
-  margin-top: 2rem;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+	margin-bottom: 2rem;
+	padding: 2rem 0.5rem 0rem 0.5rem;
+	margin-top: 2rem;
+	-ms-flex-pack: distribute;
+	justify-content: space-around;
 }
 .deal-img {
-  width: 70%;
-  height: 60%;
-  border-radius: 5%;
-  padding: 1rem 0rem 4rem 0rem;
-  margin-right: 0rem;
-  -webkit-box-shadow: 1px 1px 4px gray;
-  box-shadow: 1px 1px 4px gray;
+	width: 70%;
+	height: 60%;
+	border-radius: 5%;
+	padding: 1rem 0rem 4rem 0rem;
+	margin-right: 0rem;
+	-webkit-box-shadow: 1px 1px 4px gray;
+	box-shadow: 1px 1px 4px gray;
 }
 .deal-img-discount {
-  font-size: 1rem;
-  text-align: center;
-  /* height: 5rem; */
-  width: 60%;
-  padding: 0.5rem;
+	font-size: 1rem;
+	text-align: center;
+	/* height: 5rem; */
+	width: 60%;
+	padding: 0.5rem;
 
-  /* margin-top: 6rem; */
+	/* margin-top: 6rem; */
 }
 .viewMore-btn {
-  color: #ffc107;
-  width: 100%;
-  padding: 0rem;
+	color: #ffc107;
+	width: 100%;
+	padding: 0rem;
 }
 .viewMore-btn:hover {
-  color: black;
+	color: black;
 }
-@media (max-width: 600px) {
-  .cuisine-img {
-    width: 100%;
-  }
+@media screen and (max-width: 576px) {
+	.cuisine-img {
+		width: 100%;
+		margin-bottom: 15px;
+	}
 
-  .hide {
-    display: none;
-  }
-  /* .big-font{
+	.hide {
+		display: none;
+	}
+	/* .big-font{
     text-align: center;
 } */
-  .deal-container {
-    text-align: left;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    margin-bottom: 1rem;
-  }
-  .deal-img {
-    width: 90%;
-    height: 25%;
-  }
-  .viewMore-btn {
-    width: 100%;
-  }
-  .big-font,
-  .big-font-thin {
-    font-size: 1.5rem;
-  }
+	.deal-container {
+		text-align: left;
+		-ms-flex-pack: distribute;
+		justify-content: space-around;
+		margin-bottom: 1rem;
+	}
+	.deal-img {
+		width: 90%;
+		height: 25%;
+	}
+	.viewMore-btn {
+		width: 100%;
+	}
+	.big-font,
+	.big-font-thin {
+		font-size: 1.5rem;
+	}
 }
