--- a/src/components/css/SpecialOffer.css
+++ b/src/components/css/SpecialOffer.css
@@ -25,6 +25,7 @@
 	font-size: 24px;
 	line-height: 32px;
 	letter-spacing: 0.075em;
+	width: 100%;
 }
 
 .slider {
@@ -36,13 +37,20 @@
 	padding: 2rem;
 }
 
-@media (max-width: 600px) {
+.swiper-button-next {
+	color: #FFCA2C !important;
+}
+.swiper-button-prev {
+	color: #FFCA2C !important;
+}
+
+@media (max-width: 576px) {
 	.slider {
 		margin-bottom: 2rem;
 		margin-top: 2rem;
 	}
 	.specialOffer-slider {
-		margin-bottom: 2rem;
+		/* margin-bottom: 0.5rem; */
 		overflow: hidden;
 		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
@@ -51,13 +59,16 @@
 	}
 	.specialOffer-slider2 {
 		padding-left: 0rem;
-		padding-right: 1rem;
-		margin-bottom: 3rem;
+		/* padding-right: 1rem; */
+		margin-bottom: 0.5rem;
 	}
 	.specialoffer-img {
 		width: 100%;
 	}
 	.center {
 		text-align: center;
+	}
+	.cuisines-header {
+		padding-left: 1rem;
 	}
 }
