--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -4,6 +4,9 @@
 }
 .navlink-logo {
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navlink-logo.active {
