--- a/src/styles/HomeNavbar.css
+++ b/src/styles/HomeNavbar.css
@@ -3,7 +3,7 @@
 	padding: 0rem;
 	padding-bottom: 0.5rem;
 	padding-top: 0.5rem;
-	margin-bottom: 3.5rem;
+	margin-bottom: 2.5rem;
 }
 
 .home-navbar-brand a {
@@ -16,7 +16,7 @@
 
 .home-logo {
 	background-color: #fff;
-	width: 4rem;
+	width: 3rem;
 	height: 3rem;
 }
 
@@ -64,5 +64,11 @@
 @media screen and (max-width: 768px) {
 	.nav-search-bar {
 		display: none;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.home-navbar {
+		margin-bottom: 1.5rem;
 	}
 }
